syntax = "proto3";

import "google/api/annotations.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "UrlShortener.Shared.Protos";

package urlshortener;

service UrlShortenerService {
  rpc CreateShortLink (CreateShortLinkRequest) returns (CreateShortLinkResponse) {
    option (google.api.http) = {
      post: "/Url"
      body: "*"
    };
  }
  rpc GetAllLinks (GetAllLinksRequest) returns (GetAllLinksResponse) {
    option (google.api.http) = {
      get: "/Url"
    };
  }
  rpc GetLinkByUserId (GetAllLinksRequest) returns (GetAllLinksResponse) {
    option (google.api.http) = {
      get: "/Url/User"
    };
  }
  rpc CreateShortLinkByUserId (CreateShortLinkByUserIdRequest) returns (CreateShortLinkResponse) {
    option (google.api.http) = {
      post: "/Url/User"
      body: "*"
    };
  }
}

message CreateShortLinkRequest {
  string original_url = 1;
}

message CreateShortLinkByUserIdRequest {
  string original_url = 1;
  google.protobuf.StringValue custom_code = 2;
  google.protobuf.StringValue user_id = 3;
}

message CreateShortLinkResponse {
  string short_code = 1;
  string short_url = 2;
  string original_url = 3;
  string message = 4;
}

message GetAllLinksRequest {
  int32 page = 1;
  int32 page_size = 2;
  google.protobuf.StringValue user_id = 3;
}

message GetAllLinksResponse {
  repeated ShortLink links = 1;
  int32 total_count = 2;
}

message ShortLink {
  string short_code = 1;
  string original_url = 2;
  string created_at = 3;
  int32 click_count = 4;
}
